# claude-code-pr-dashboard

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  README.md  biome.json  commitlint.config.js  lefthook.yml  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-please.yml
claude/commands/: fix-pr.md
docker/: Dockerfile  docker-compose.mongodb-replicaset.yml  docker-compose.mongodb.yml  docker-compose.yml  entrypoint.sh  preflight.mjs
docker/commands/: fix-pr.md
src/: App.svelte  app.css  app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  github.rs  lib.rs  pty.rs
src/lib/: types.ts
src/lib/components/: AuthCheck.svelte  SessionArea.svelte  SessionPanel.svelte  Sidebar.svelte
src/lib/stores/: prs.svelte.ts  sessions.svelte.ts  settings.svelte.ts
